@@ -44,6 +44,7 @@ close-quick-reference=Close quick reference panel
 crafter=Crafter
 crafting-time=Crafting time:
 favorites=Favorites
+fixed-recipe=Fixed recipe:
 fluid=Fluid
 forward-to=Forward to __1__
 general=General
@@ -78,6 +79,7 @@ search=Search
 seconds-tooltip=The amount of time the recipe will take in a crafter with no modules and a crafting speed of exactly 1.0.
 seconds=__1__ seconds
 settings=Settings
+shift-click-to-view-fixed-recipe=Shift + click to view fixed recipe.
 stack-size=Stack size:
 technology=Technology
 unlocked-by=Unlocked by (__1__)
